vim (2:7.4b.004-1) UNRELEASED; urgency=low

  * Merge upstream tag v7-4b-004
    + 7.4a.044: Clear window from b_wininfo in win_free().  (Closes: #717529)

 -- James McCoy <jamessan@debian.org>  Thu, 01 Aug 2013 23:07:27 -0400

vim (2:7.4a.012-1) experimental; urgency=low

  * Merge upstream tag v7-4a-012
    + New NFA regex engine.  Vim automatically determines whether to use the
      new or old engine based on the pattern.  A specific engine can be
      forced with the 'regexengine' option or within a pattern using the \%#=
      atom.
    + Updated Perl syntax files
      - Adds support for Perl 5.10 syntax.  (Closes: #681606)
      - Fixes syntax highlighting when qq{} contains a } character.  (Closes:
        #598197)
    + Fix display of an empty entry in NetRW directory listing.  (Closes:
      #709101)
    + Recognize Ikiwiki's *.mdwn as markdown filetype.  (Closes: #672597)
    + 7.3.985: Call g_set_prgname() on startup to set a proper WM_CLASS.
      (Closes: #639925)
    + Source ~/.vim/vimrc or ~/.vim/gvimrc in favor of ~/.vimrc or ~/.gvimrc.
    + Update sh syntax file
      - Recognize when sh is dash and change the default behavior highlighting
        to be POSIX instead of Bourne.  (Closes: #712657, #699172)
      - Correctly highlight text after a "--".  (Closes: #713922)
  * debian/rules: Simplify version handling and bump for the pre-release.
  * Add shadowdir-fixes.patch, to fix test failures when building in a
    shadow directory.

 -- James McCoy <jamessan@debian.org>  Fri, 12 Jul 2013 22:30:28 -0400

vim (2:7.3.923-3) unstable; urgency=low

  * Build-Conflict against ruby1.8{,-dev} to work around incorrect ruby{,-dev}
    Provides (c.f., #710022).

 -- James McCoy <jamessan@debian.org>  Sun, 23 Jun 2013 22:12:29 -0400

vim (2:7.3.923-2) unstable; urgency=low

  * Fix FTBFS with M-A Python.  (Closes: #701513)

 -- James McCoy <jamessan@debian.org>  Sun, 26 May 2013 22:18:36 -0400

vim (2:7.3.923-1) unstable; urgency=low
